name: hsnsq
version: 0.1.2.0
cabal-version: >=1.10
build-type: Simple
license: Apache-2.0
license-file: LICENSE
copyright: (c) Paul Berens
maintainer: berens.paul@gmail.com
homepage: https://github.com/gamelost/hsnsq
synopsis: Haskell NSQ client.
description:
    Currently a primitive NSQ client, it implements the very basics of an NSQ client for communicating with single NSQ servers. For example usage refer to <https://github.com/gamelost/nsq-benchmarks/haskell/benchmark.hs benchmark>
category: Network
author: Paul Berens
extra-source-files:
    README.md

library
    build-depends: aeson,
                   aeson-casing,
                   async,
                   attoparsec,
                   attoparsec-binary,
                   base >=4.5 && <4.9,
                   bytestring,
                   classy-prelude,
                   containers,
                   formatting,
                   hostname,
                   http-types,
                   http-client,
                   monad-logger,
                   mtl,
                   network,
                   pipes,
                   pipes-attoparsec,
                   pipes-network,
                   stm,
                   stm-chans,
                   text,
                   transformers >= 0.4.2.0,
                   monad-control,
                   lifted-base,
                   lifted-async,
                   api-builder
    exposed-modules:
                    Network.NSQ
                    Network.NSQ.Connection
                    Network.NSQ.Identify
                    Network.NSQ.Parser
                    Network.NSQ.Types
                    Network.NSQ.Lookup
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -fno-warn-missing-signatures -O2
    -- default-extensions: NoImplicitPrelude
